Use List instead of Set for flags rules.conditions.values